# letsopt

./: .dockerignore  Cargo.toml  Dockerfile  QUICKSTART.md  README.md  build.rs  docker-compose.yml
.github/workflows/: ci.yml
examples/: client.rs  mip_client.rs  stream_client.rs
proto/: lp_solver.proto
src/: lib.rs  main.rs
src/application/: grpc_service.rs  mappers.rs  mod.rs
src/domain/: mod.rs  models.rs  solver_service.rs  value_objects.rs
src/infrastructure/: mod.rs  server.rs
src/solver/: coin_cbc_solver.rs  factory.rs  highs_solver.rs  mod.rs
